# RHex_ROS2

./: .gitignore  README.md
src/rhex_control/: package.xml  setup.py
src/rhex_control/config/: rhex_controller.yaml
src/rhex_control/rhex_control/: teleop_control.py  tripod_gait.py
src/rhex_description/: CMakeLists.txt  package.xml
src/rhex_description/launch/: display.launch.py
src/rhex_description/rviz/: rhex_config.rviz
src/rhex_description/urdf/: materials.xacro  rhex.gazebo  rhex.trans  rhex.urdf  rhex.xacro
src/rhex_gazebo/: CMakeLists.txt  package.xml
src/rhex_gazebo/launch/: rhex_gazebo.launch.py
src/rhex_gazebo/models/ramp/: ramp.stl  ramp_10.stl  ramp_15.stl  ramp_20.stl  ramp_25.stl
src/rhex_gazebo/models/stair_case/: model.config  model.sdf
src/rhex_gazebo/models/stairs/: model.sdf
src/rhex_gazebo/models/surface/: surface.stl
src/rhex_gazebo/models/wall/: model.sdf
src/rhex_gazebo/worlds/: combined.world  empty.world  empty.world.old  empty_bullet.world  marsyard2020.world  marsyard2022.world  stair_world.world
